PYI-819: Update session end lambda to use new client request details from session store and return a ClientResponse object