@@ -6,7 +6,6 @@ import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyResponseEvent;
 import com.nimbusds.oauth2.sdk.AuthorizationCode;
 import com.nimbusds.oauth2.sdk.ParseException;
-import com.nimbusds.oauth2.sdk.id.Identifier;
 import com.nimbusds.openid.connect.sdk.AuthenticationRequest;
 import org.apache.http.HttpStatus;
 import org.slf4j.Logger;
@@ -14,24 +13,28 @@ import org.slf4j.LoggerFactory;
 import software.amazon.lambda.powertools.tracing.Tracing;
 import uk.gov.di.ipv.core.library.annotations.ExcludeFromGeneratedCoverageReport;
 import uk.gov.di.ipv.core.library.domain.ErrorResponse;
+import uk.gov.di.ipv.core.library.dto.ClientSessionDetailsDto;
 import uk.gov.di.ipv.core.library.helpers.ApiGatewayResponseGenerator;
 import uk.gov.di.ipv.core.library.helpers.RequestHelper;
+import uk.gov.di.ipv.core.library.persistence.item.IpvSessionItem;
 import uk.gov.di.ipv.core.library.service.AuthorizationCodeService;
 import uk.gov.di.ipv.core.library.service.ConfigurationService;
+import uk.gov.di.ipv.core.library.service.IpvSessionService;
 import uk.gov.di.ipv.core.library.validation.AuthRequestValidator;
+import uk.gov.di.ipv.core.sessionend.domain.ClientResponse;
 
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class SessionEndHandler
         implements RequestHandler<APIGatewayProxyRequestEvent, APIGatewayProxyResponseEvent> {
-
     private static final Logger LOGGER = LoggerFactory.getLogger(SessionEndHandler.class);
     private static final String IPV_SESSION_ID_HEADER_KEY = "ipv-session-id";
 
     private final AuthorizationCodeService authorizationCodeService;
+    private final IpvSessionService sessionService;
     private final ConfigurationService configurationService;
     private final AuthRequestValidator authRequestValidator;
 
@@ -39,14 +42,17 @@ public class SessionEndHandler
     public SessionEndHandler() {
         this.configurationService = new ConfigurationService();
         this.authorizationCodeService = new AuthorizationCodeService(configurationService);
+        this.sessionService = new IpvSessionService(configurationService);
         this.authRequestValidator = new AuthRequestValidator(configurationService);
     }
 
     public SessionEndHandler(
             AuthorizationCodeService authorizationCodeService,
+            IpvSessionService sessionService,
             ConfigurationService configurationService,
             AuthRequestValidator authRequestValidator) {
         this.authorizationCodeService = authorizationCodeService;
+        this.sessionService = sessionService;
         this.configurationService = configurationService;
         this.authRequestValidator = authRequestValidator;
     }
@@ -55,10 +61,16 @@ public class SessionEndHandler
     @Tracing
     public APIGatewayProxyResponseEvent handleRequest(
             APIGatewayProxyRequestEvent input, Context context) {
-        Map<String, List<String>> queryStringParameters = getQueryStringParametersAsMap(input);
+        String ipvSessionId =
+                RequestHelper.getHeaderByKey(input.getHeaders(), IPV_SESSION_ID_HEADER_KEY);
+
+        IpvSessionItem ipvSessionItem = sessionService.getIpvSession(ipvSessionId);
+
+        Map<String, List<String>> authParameters =
+                getAuthParamsAsMap(ipvSessionItem.getClientSessionDetails());
 
         var validationResult =
-                authRequestValidator.validateRequest(queryStringParameters, input.getHeaders());
+                authRequestValidator.validateRequest(authParameters, input.getHeaders());
         if (!validationResult.isValid()) {
             return ApiGatewayResponseGenerator.proxyJsonResponse(
                     HttpStatus.SC_BAD_REQUEST, validationResult.getError());
@@ -66,7 +78,7 @@ public class SessionEndHandler
 
         AuthenticationRequest authenticationRequest;
         try {
-            authenticationRequest = AuthenticationRequest.parse(queryStringParameters);
+            authenticationRequest = AuthenticationRequest.parse(authParameters);
         } catch (ParseException e) {
             LOGGER.error("Authentication request could not be parsed", e);
             return ApiGatewayResponseGenerator.proxyJsonResponse(
@@ -76,28 +88,43 @@ public class SessionEndHandler
 
         AuthorizationCode authorizationCode = authorizationCodeService.generateAuthorizationCode();
 
-        String ipvSessionId =
-                RequestHelper.getHeaderByKey(input.getHeaders(), IPV_SESSION_ID_HEADER_KEY);
-
         authorizationCodeService.persistAuthorizationCode(
                 authorizationCode.getValue(),
                 ipvSessionId,
                 authenticationRequest.getRedirectionURI().toString());
 
-        Map<String, Identifier> payload = Map.of("code", authorizationCode);
+        ClientResponse clientResponse =
+                new ClientResponse(
+                        ipvSessionItem.getClientSessionDetails().getRedirectUri(),
+                        authorizationCode.getValue());
 
-        return ApiGatewayResponseGenerator.proxyJsonResponse(HttpStatus.SC_OK, payload);
+        return ApiGatewayResponseGenerator.proxyJsonResponse(HttpStatus.SC_OK, clientResponse);
     }
 
     @Tracing
-    private Map<String, List<String>> getQueryStringParametersAsMap(
-            APIGatewayProxyRequestEvent input) {
-        if (input.getQueryStringParameters() != null) {
-            return input.getQueryStringParameters().entrySet().stream()
-                    .collect(
-                            Collectors.toMap(
-                                    Map.Entry::getKey, entry -> List.of(entry.getValue())));
+    private Map<String, List<String>> getAuthParamsAsMap(
+            ClientSessionDetailsDto clientSessionDetailsDto) {
+        if (clientSessionDetailsDto != null) {
+            Map<String, List<String>> authParams = new HashMap<>();
+            authParams.put(
+                    AuthRequestValidator.RESPONSE_TYPE_PARAM,
+                    Collections.singletonList(clientSessionDetailsDto.getResponseType()));
+            authParams.put(
+                    AuthRequestValidator.CLIENT_ID_PARAM,
+                    Collections.singletonList(clientSessionDetailsDto.getClientId()));
+            authParams.put(
+                    AuthRequestValidator.REDIRECT_URI_PARAM,
+                    Collections.singletonList(clientSessionDetailsDto.getRedirectUri()));
+            authParams.put(
+                    AuthRequestValidator.SCOPE_PARAM,
+                    Collections.singletonList(clientSessionDetailsDto.getScope()));
+            authParams.put(
+                    AuthRequestValidator.STATE_PARAM,
+                    Collections.singletonList(clientSessionDetailsDto.getState()));
+
+            return authParams;
         }
+
         return Collections.emptyMap();
     }
 }
